--- a/Projekat WT/naslovnaStil.css
+++ b/Projekat WT/naslovnaStil.css
@@ -42,8 +42,9 @@ header>h1
 {
 	float:left;
 	position:absolute;
-	top:8vh;
+
 	left:8vw;
+	bottom:82vh;
 	background-color:transparent;
 	height:10vh;
 	width:9vw;
@@ -209,7 +210,7 @@ nav>ul>li>a
 	float:left;
 }
 
-#slika
+.slika
 {
 	position:relative;
 	width:12vw;	
@@ -219,7 +220,7 @@ nav>ul>li>a
 	margin-right:auto;
 }
 
-#slika>a>img
+.slika>a>img
 {
 	position:relative;
 	height:100%;
@@ -227,7 +228,7 @@ nav>ul>li>a
 	margin-bottom:10px;
 }
 
-#tekst
+.tekst
 {
 	position:relative;
 	width:15vw;
@@ -236,7 +237,7 @@ nav>ul>li>a
 	margin-left:auto;
 	margin-right:auto;
 }
-#tekst>h2
+.tekst>h2
 {
 	font-size:1vh;
 	font-size:1vw;
@@ -245,7 +246,7 @@ nav>ul>li>a
 	margin-bottom:-1vh;
 	
 }
-#tekst>p
+.tekst>p
 {
 	font-size:1vh;
 	font-size:1vw;
