--- a/Projekat WT/naslovnaStil.css
+++ b/Projekat WT/naslovnaStil.css
@@ -1,7 +1,7 @@
 
 body
 {
-	width:90%;
+	width:90vw;
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#ccf5ff;
@@ -20,7 +20,7 @@ header
 {
 	font-size:3vh;
 	font-size:3vw;
-	width:100%;
+	width:90vw;
 	background-color:#0099ff;
 	border-style:solid;
 	border-color:navy;
@@ -42,7 +42,6 @@ header>h1
 {
 	float:left;
 	position:absolute;
-
 	left:8vw;
 	bottom:82vh;
 	background-color:transparent;
@@ -135,7 +134,6 @@ nav>ul>li>a
 }
 #kategorije
 {
-	
 	position:relative;
 	width:23vw;
 	margin-top:17px;
@@ -163,15 +161,22 @@ nav>ul>li>a
 
 #kategorije>section
 {
-	width:75%;
+	float:left;
+	width:15vw;
 	margin-left:auto;
 	margin-right:auto;
 }
 
+#kategorije>section>ul
+{
+	padding-left:2px;
+}
+
 #kategorije>section>ul>li
 {
-	width:100%;
+	width:5vw;
 	margin-left:auto;
+	margin-right:auto;
 	position:relative;
 	padding:5px;
 	font-family:Arial;
@@ -204,7 +209,7 @@ nav>ul>li>a
 	margin-right:auto;
 	width:15vw;
 	height:30vh;
-	background-color:#FFCC99;
+	background-color:#ff8533;
 	border-style:outset;
 	border-color:black;
 	float:left;
@@ -232,8 +237,8 @@ nav>ul>li>a
 {
 	position:relative;
 	width:15vw;
-	height:1vh;
-	margin-top:10%;
+	height:10vh;
+	margin-top:3vh;
 	margin-left:auto;
 	margin-right:auto;
 }
