Zadatak2 i Zadatak3 bez sortiranja

--- a/Projekat WT/Spirala3/linkStil.css
+++ b/Projekat WT/Spirala3/linkStil.css
@@ -124,6 +124,17 @@ header>#naslov>h1
 	height:2vh;
 }
 
+#login
+{
+	background-color:transparent;
+	float:right;
+	position:absolute;
+	right:5vw;
+	bottom:82vh;
+	font-size:1vh;
+	font-size:1vw;
+}
+
 nav
 {
 	margin-top:2vh;
