--- a/Projekat WT/Spirala3/dodajVijestStil.css
+++ b/Projekat WT/Spirala3/dodajVijestStil.css
@@ -134,7 +134,6 @@ header>#naslov>h1
 	font-size:1vw;
 }
 
-
 nav
 {
 	margin-top:2vh;
@@ -210,14 +209,14 @@ section>form>#labele
 section>form>#unos
 {
 	font-size:2vh;
-	width:28vw;
+	width:39vw;
 	margin-left:auto;
 	margin-right:auto;
 	float:right;
 }
 
 
-section>form>#unos>p>input
+section>form>#unos>p>label>input
 {
 	position:relative;
 	border-style:solid;
