--- a/Projekat WT/Spirala3/tabelaStil.css
+++ b/Projekat WT/Spirala3/tabelaStil.css
@@ -123,7 +123,16 @@ header>#naslov>h1
 	width:5vw;
 	height:2vh;
 }
-
+#login
+{
+	background-color:transparent;
+	float:right;
+	position:absolute;
+	right:5vw;
+	bottom:82vh;
+	font-size:1vh;
+	font-size:1vw;
+}
 nav
 {
 	margin-top:2vh;
